# IntegraPose

./: .gitattributes  .gitignore  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  botsort.yaml  environment.yml  mkdocs.yml  pose_annotator.py  pytest.ini  requirements-albumentations-gui.txt  requirements.txt  requriements.txt  setup.cfg
.github/workflows/: docs.yml
Advanced Gait & Kinematic Analysis/: advanced_behavioral_analysis.py  aggregate_results.py  analysis.py  batch_process.py  compare_ccm.py  compare_gait.py  config.py  data_loader.py  decision_dynamics_analysis.py  gui_launcher.py  main.py  stride_detector.py  utils.py
BehaviorAnnotation_ModelTraining/: environment.yml  keypoint_annotator_module.py  main_gui_app.py  split_data.py
BehaviorAnnotation_ModelTraining/gui/: advanced_bout_analyzer.py  bout_confirmation_tool.py  inference_tab.py  log_tab.py  pose_clustering_tab.py  roi_analytics_tab.py  setup_tab.py  tooltips.py  training_tab.py  webcam_tab.py
BehaviorScope/: .gitignore  README.md  __init__.py  batch_process_videos.py  behaviorscope_gui.py  benchmark_pipeline.py  config.py  cropping.py  data.py  infer_behavior_lstm.py  model.py  prepare_sequences_from_yolo.py  quantification.py  quantization_script.py  requirements.txt  review_annotations.py  train_behavior_lstm.py
HMM-VAE-LSTM Video Segmentation/: HMM_&_VAE Analysis.html  Test_config.json  analysis.py  data_processing_hdbscan.py  hmm_utils_revised.py  main.py  requirement.txt  vae_lstm_utils.py  video_utils.py
IntegraPose-EDA/: analysis_handler.py  app_config.py  bout_analysis_utils.py  data_handler.py  feature_calculator.py  integra_pose_utils.py  main_EDA_IntegraPose.py  plotting_utils.py
LSTM-Based Sequence Classifiers/: config.json  data_loader.py  models.py  prepare_dataset.py  real_time_inference.py  run_training.py  training.py  video_clipper_gui.py
Sub-Behavior Discovery with LSTM Autoencoders/: LSTM_Autoencoder_Segmentation.html  clustering.py  config.json  data_loader.py  models.py  run_analysis.py  training.py  video_generator.py
Tandem YOLO-LSTM Classifier/: config.json  lstm_sequence_classifier.html  main.py  requirements.txt  run_training.py
docs/: Quick_Start_Guide.html  gait_analysis_methods.html  hmm_vae_lstm_segmentation_guide.html  index.html  index.md  lstm_autoencoder_guide.html  lstm_sequence_classifier.html  post_hoc_analysis.html  showcase.md  tutorials.md
integra_pose/: __init__.py  __main__.py  bootstrap.py  keypoint_annotator_module.py  main_gui_app.py
tests/: conftest.py  test_advanced_bout_analyzer.py  test_aggregate_states_into_bouts.py  test_albumentations_gui_requirements.py  test_analytics_roi_sources.py  test_analytics_service.py  test_assisted_pose_curation_core.py  test_auto_split.py  test_autolabel_forge_packaging.py  test_autolabel_forge_previews.py  test_autolabel_forge_runtime_errors.py  test_batch_figure_pipeline.py  test_batch_pipeline_cancellation.py  test_batch_preflight.py  test_batch_processing_wizard.py  test_bout_analyzer_bout_logic.py  test_bout_analyzer_roi_memberships.py  test_bout_confirmation_tool.py  test_clip_export.py  test_config_manager.py  test_dataset_augmentor_lab_core.py  test_frame_extraction.py  test_frame_extractor.py  test_inference_controller.py  test_packaging_metadata.py  test_path_resolver.py  test_per_class_clustering.py  test_plugin_loading.py  test_plugin_opt_in.py  test_plugin_restructure.py  test_roi_auto_placement.py  test_roi_builder_dialog.py  test_roi_editor_geometry.py  test_roi_event_review_tool.py  test_roi_shape_metadata.py  test_sanity_check.py  test_signal_score.py  test_stability.py  test_stage_status_strip.py  test_state_names_persistence.py  (+7 more)
tools/: install_albumentations_gui.py
(+289 files in other folders)
