[metadata]
name = IntegraPose
# A version is required for setuptools to build an installable package.
# This beta version follows PEP 440 and should align with the corresponding
# GitHub tag/release.
version = 3.0.1b2
description = Desktop toolkit for simultaneous pose estimation, data annotation, behavioral classification, clustering, and analytics.
long_description = file: README.md
long_description_content_type = text/markdown
author = Farhan Augustine
license = AGPL-3.0-only
url = https://github.com/farhanaugustine/IntegraPose
license_files =
    LICENSE
    THIRD_PARTY_NOTICES.md
classifiers =
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence :: Animal Behavior
project_urls =
    Documentation = https://farhanaugustine.github.io/IntegraPose/
    Source = https://github.com/farhanaugustine/IntegraPose
    Issue Tracker = https://github.com/farhanaugustine/IntegraPose/issues

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.9
install_requires =
    numpy==1.26.4
    pandas==2.2.2
    scipy==1.11.4
    matplotlib==3.8.4
    seaborn==0.13.2
    opencv-python==4.9.0.80
    openpyxl==3.1.5
    Pillow==10.4.0
    PyYAML==6.0.2
    statsmodels==0.14.2
    tqdm==4.66.2
    ultralytics==8.4.18
    supervision==0.27.0.post1
    typing-extensions==4.14.0
    eval-type-backport==0.3.1
    sv-ttk==2.6.0
    importlib-metadata==6.8.0; python_version < "3.10"

[options.extras_require]
# Optional plugin dependencies (install only when you intend to use them).
# Note: Albumentations is intentionally excluded here because setuptools extras cannot express the
# required --no-deps install flow, and a normal dependency install would pull opencv-python-headless.
plugins =
    scikit-learn==1.3.1
    umap-learn==0.5.7
    hdbscan==0.8.40
    hmmlearn==0.3.0
    networkx==3.3
    jsonschema==4.21.1
    plotly==5.24.1
    imbalanced-learn==0.11.0
    pyEDM==2.2.3
    autodistill==0.1.29
    autodistill-grounding-dino==0.1.4
    roboflow==1.2.13
    # roboflow 1.2.13 hard-pins idna==3.7; pinning it here avoids a
    # post-install resolver warning when a newer idna lands first.
    idna==3.7
    transformers==4.57.6
    skCCM

# Contributors: docs, linting, tests, packaging, and the packaged plugin stack.
# Note: Albumentations still needs a separate install step; see requirements-albumentations-gui.txt.
dev =
    scikit-learn==1.3.1
    umap-learn==0.5.7
    hdbscan==0.8.40
    hmmlearn==0.3.0
    networkx==3.3
    jsonschema==4.21.1
    plotly==5.24.1
    imbalanced-learn==0.11.0
    pyEDM==2.2.3
    autodistill==0.1.29
    autodistill-grounding-dino==0.1.4
    roboflow==1.2.13
    # roboflow 1.2.13 hard-pins idna==3.7; pinning it here avoids a
    # post-install resolver warning when a newer idna lands first.
    idna==3.7
    transformers==4.57.6
    skCCM
    pytest==8.3.3
    pytest-cov==5.0.0
    black==24.10.0
    ruff==0.6.9
    mkdocs==1.6.1
    mkdocs-material==9.5.49
    mkdocstrings[python]==0.25.1
    mkdocstrings-python==1.10.5
    griffe==0.49.0
    pip-licenses==4.5.0
    build==1.2.2.post1

[options.packages.find]
where = .
include =
    integra_pose
    integra_pose.*

[options.entry_points]
console_scripts =
    IntegraPose = integra_pose.__main__:main
    integrapose = integra_pose.__main__:main
    integrapose-gui = integra_pose.__main__:main
